force-app/main/default/objects/Announcement__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Product Specific</fullName>
            </value>
            <value>
                <fullName>Entitlement Specific</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Customer Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>