force-app/main/default/objects/Announcement__c/fields/Announcement_Type__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Type__c</fullName>
    <label>Announcement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Latest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>