force-app/main/default/objects/Announcement__c/fields/Announcement_URL__c.field-meta.xml
<CustomField>
    <fullName>Announcement_URL__c</fullName>
    <label>Announcement URL</label>
    <type>Url</type>
</CustomField>