force-app/main/default/objects/Announcement__c/fields/Customer_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_URL__c</fullName>
    <formula>$Label.ESP_Community_BaseURL &amp; &apos;?type=announcement&amp;id=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer URL</label>
    <type>Text</type>
</CustomField>