force-app/main/default/objects/Announcement__c/validationRules/Product_NOT_Blank_For_CustomerSpecific.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_NOT_Blank_For_CustomerSpecific</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Access_Level__c)  = &apos;Customer Specific&apos;  
&amp;&amp;     
NOT( ISBLANK(Product__c) )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>For Customer Specific Announcement, please remove the Products assignment on the Announcement or Change the Access level value to Product Specific</errorMessage>
</ValidationRule>