force-app/main/default/objects/Announcement__c/validationRules/Product_Required_For_ProductSpecific.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required_For_ProductSpecific</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Access_Level__c) = &apos;Product Specific&apos;  
&amp;&amp;     
ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>For Product Specific announcement, please enter the product on the Announcement.</errorMessage>
</ValidationRule>