force-app/main/default/objects/Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Access_Level__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Announcement_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>