force-app/main/default/objects/Announcement__c/listViews/Critical_Announcements.listView-meta.xml
<ListView>
    <fullName>Critical_Announcements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Announcement_Type__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Critical Announcements</label>
</ListView>