force-app/main/default/objects/Announcement__c/listViews/Latest_Announcements.listView-meta.xml
<ListView>
    <fullName>Latest_Announcements</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Announcement_Type__c</field>
        <operation>equals</operation>
        <value>Latest</value>
    </filters>
    <label>Latest Announcements</label>
</ListView>