force-app/main/default/objects/Announcement__c/listViews/Product_Specific.listView-meta.xml
<ListView>
    <fullName>Product_Specific</fullName>
    <columns>NAME</columns>
    <columns>Access_Level__c</columns>
    <columns>Announcement_Type__c</columns>
    <columns>Announcement_URL__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Access_Level__c</field>
        <operation>equals</operation>
        <value>Product Specific</value>
    </filters>
    <label>Product Specific</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>